[package]
name = "block-chain-2"
version = "0.1.0"
edition = "2021"
authors = ["Edwin <edwinchebiikibet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version =  "1.0.160", features = ["derive"] }
serde_derive ="1.0.160"
serde_json = "1.0.96"
sha2 ="*"
colored ="2.0.0"